--- a/style.css
+++ b/style.css
@@ -127,3 +127,28 @@ a:hover {
   width: 100%;
   height: auto;
 }
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 24px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  #featured-article h2 {
+    font-size: 28px;
+  }
+  h3 {
+    font-size: 16px;
+  } */
+  p {
+    margin-bottom: 12px;
+    /* font-size: 16px; */
+  }
+  /* main {
+    padding: 8px;
+  }
+  section {
+    padding: 8px;
+  } */
+}
